--- a/index.html
+++ b/index.html
@@ -50,7 +50,15 @@
                <li><a href="#">Eigenschaften</a></li>
             </ul>
          </li>
-         <li><a href="#">Anleitung</a></li>
+         <li><a id="tutorial" href="#" onclick="startTutorial()">Anleitung</a></li>
+         <div id="roboter" class="hidden">
+            <img id="speechie-robot" src="/src/assets/Spechie-roboter.svg">
+            <div id="text-area"><p id="info-text">kjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlksnlks</p>
+               <i id="clicks" onclick="onClick()" class="fas fa-arrow-right"></i>
+            </div>
+            
+         </div>
+         
          <li><a href="#">Kontakt</a></li>
       </ul>
    </nav>
