--- a/index.html
+++ b/index.html
@@ -44,15 +44,7 @@
             <li><a href="#">Eigenschaften</a></li>
           </ul>
         </li>
-         <li><a id="tutorial" href="#" onclick="startTutorial()">Anleitung</a></li>
-         <div id="roboter" class="hidden">
-            <img id="speechie-robot" src="/src/assets/Spechie-roboter.svg">
-            <div id="text-area"><p id="info-text">kjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlkskjbsfdnclksdmcölsdwehsnlksnlks</p>
-               <i id="clicks" onclick="onClick()" class="fas fa-arrow-right"></i>
-            </div>
-            
-         </div>
-         
+         <li><a id="tutorial" href="#" onclick="startTutorial()">Anleitung</a></li>  
          <li><a href="#">Kontakt</a></li>
       </ul>
     </nav>
@@ -105,5 +97,13 @@
       <!--<button id="btnSavePDF" onclick="save()">save as PDF</button>
 <button id="cmd" onclick="save()">as txt</button> -->
     </fieldset>
+
+    <div id="roboter" class="hidden">
+      <img id="speechie-robot" src="/src/assets/Spechie-roboter.svg">
+      <div id="text-area"><p id="info-text">Hi ich bin Spexter, ich zeig dir wie meine Welt transkribiert!</p>
+         <button id="clicks" onclick="onClick()" class="fas fa-arrow-right"></button>
+      </div>
+   </div>
+   
   </body>
 </html>
