--- a/index.html
+++ b/index.html
@@ -1,101 +1,29 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <script defer src="src/app/index.js"></script>
-    <link rel="stylesheet" href="src/styles/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Syne&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/6f46a9dc22.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./src/styles/startStyle.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
   </head>
-
   <body>
-    <nav>
-      <div class="logo">
-        <img src="src/assets/speechie2.png" />
-      </div>
-      <div class="speechie">speechie</div>
-      <label for="btn" class="icon">
-        <span class="fa fa-bars"></span>
-      </label>
-      <input type="checkbox" id="btn" />
-      <ul>
-        <li>
-          <label for="btn-1" class="show">Datei +</label>
-          <a href="#">Datei</a>
-          <input type="checkbox" id="btn-1" />
-          <ul>
-            <li id="openFile"><a href="#">Audio-Datei öffnen</a></li>
-            <li><a href="#" onclick="savetxt();">Speichern als TXT</a></li>
-            <li><a href="#" onclick="save()">Exportieren als PDF</a></li>
-            <li><a href="#">Eigenschaften</a></li>
-          </ul>
-        </li>
-        <li><a href="#">Anleitung</a></li>
-        <li><a href="#">Kontakt</a></li>
-      </ul>
-    </nav>
+    <div class="front">
+      <img class="logo" src="./src/assets/SpeechieLogo.png" />
+      <img class="logotext" src="./src/assets/SpeechieText.png" />
+    </div>
+    <div class="text1" id="text1">Paste your mind!</div>
 
-    <fieldset>
-      <div class="darkmode">
-        <input type="checkbox" class="checkbox" id="change" />
-        <label class="label" for="change">
-          <i class="fas fa-sun"></i>
-          <i class="fas fa-moon"></i>
-          <div class="ball"></div>
-        </label>
-      </div>
-      <div class="audiobar">
-        <audio controls id="myAudio" autoplay></audio>
-        <input type="file" accept="audio/*" id="real-file" hidden="hidden" />
-        <span id="custom-text">No file chosen, yet.</span>
-      </div>
-
-      <div id="final" class="final"></div>
-      <div id="editor"></div>
-      <br />
-      <textarea id="interim" class="interim"></textarea>
-
-      <div class="buttons">
-        <i class="fas fa-file-download" id="btnSave" onclick="savetxt();"></i>
-        <i
-          class="far fa-play-circle"
-          id="play-button"
-          onclick="playButton();"
-        ></i>
-        <div class="coloredButtons">
-          <i
-            class="fas fa-circle speakerred colorbutton"
-            id="testBtn1"
-            onclick="switchColor('red');"
-          ></i>
-          <i
-            class="fas fa-circle speakergreen colorbutton"
-            id="testBtn2"
-            onclick="switchColor('green');"
-          ></i>
-          <i
-            class="fas fa-circle speakerpurple colorbutton"
-            id="testBtn3"
-            onclick="switchColor('purple');"
-          ></i>
-        </div>
-      </div>
-      <!--<button id="btnSavePDF" onclick="save()">save as PDF</button>
-<button id="cmd" onclick="save()">as txt</button> -->
-    </fieldset>
+    <div class="buttonBar">
+      <button class="buttons">
+        <a href="./src/views/transcription.html">zum Tutorial</a>
+      </button>
+      <button class="buttons">
+        <a href="./src/views/transcription.html">direkt beginnen!</a>
+      </button>
+    </div>
   </body>
 </html>
